samples/_failures_safe/1761707417_c111ea_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5c6097e1.c: In function ‘main’:
./samples/SAFE/__tmp_5c6097e1.c:140:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  140 |     Matrix result
      |     ^~~~~~
./samples/SAFE/__tmp_5c6097e1.c:140:5: error: expected declaration or statement at end of input
